@@ -19,7 +19,8 @@ BEGIN {
             firstval first_value lastval last_value
             each_array each_arrayref
             pairwise natatime
-            mesh zip uniq minmax part
+            mesh zip uniq distinct
+            minmax part
         } ],
     );
     @EXPORT_OK = ( @{ $EXPORT_TAGS{'all'} } );
@@ -325,6 +326,7 @@ die $@ if $@;
 *first_value = \&firstval;
 *last_value  = \&lastval;
 *zip         = \&mesh;
+*distinct    = \&uniq;
 
 1;
 
@@ -347,13 +349,13 @@ List::MoreUtils - Provide the stuff missing in List::Util
         firstval first_value lastval last_value
         each_array each_arrayref
         pairwise natatime
-        mesh zip uniq minmax part
+        mesh zip uniq distinct minmax part
     };
 
 =head1 DESCRIPTION
 
 B<List::MoreUtils> provides some trivial but commonly needed functionality on
-lists which is not going to go into C<List::Util>.
+lists which is not going to go into L<List::Util>.
 
 All of the below functions are implementable in only a couple of lines of Perl
 code. Using the functions from this module however should give slightly better
@@ -385,8 +387,8 @@ Returns false otherwise, or C<undef> if LIST is empty.
 
 =item none BLOCK LIST
 
-Logically the negation of C<any>. Returns a true value if no item in LIST meets the
-criterion given through BLOCK. Sets C<$_> for each item in LIST in turn:
+Logically the negation of C<any>. Returns a true value if no item in LIST meets
+the criterion given through BLOCK. Sets C<$_> for each item in LIST in turn:
 
     print "No value defined"
         if none { defined($_) } @list;
@@ -395,8 +397,9 @@ Returns false otherwise, or C<undef> if LIST is empty.
 
 =item notall BLOCK LIST
 
-Logically the negation of C<all>. Returns a true value if not all items in LIST meet
-the criterion given through BLOCK. Sets C<$_> for each item in LIST in turn:
+Logically the negation of C<all>. Returns a true value if not all items in LIST
+meet the criterion given through BLOCK. Sets C<$_> for each item in LIST in
+turn:
 
     print "Not all values defined"
         if notall { defined($_) } @list;
@@ -405,15 +408,15 @@ Returns false otherwise, or C<undef> if LIST is empty.
 
 =item true BLOCK LIST
 
-Counts the number of elements in LIST for which the criterion in BLOCK is true. Sets C<$_> for 
-each item in LIST in turn:
+Counts the number of elements in LIST for which the criterion in BLOCK is true.
+Sets C<$_> for  each item in LIST in turn:
 
     printf "%i item(s) are defined", true { defined($_) } @list;
 
 =item false BLOCK LIST
 
-Counts the number of elements in LIST for which the criterion in BLOCK is false. Sets C<$_> for
-each item in LIST in turn:
+Counts the number of elements in LIST for which the criterion in BLOCK is false.
+Sets C<$_> for each item in LIST in turn:
 
     printf "%i item(s) are not defined", false { defined($_) } @list;
 
@@ -421,8 +424,8 @@ each item in LIST in turn:
 
 =item first_index BLOCK LIST
 
-Returns the index of the first element in LIST for which the criterion in BLOCK is true. Sets C<$_>
-for each item in LIST in turn:
+Returns the index of the first element in LIST for which the criterion in BLOCK
+is true. Sets C<$_> for each item in LIST in turn:
 
     my @list = (1, 4, 3, 2, 4, 6);
     printf "item with index %i in list is 4", firstidx { $_ == 4 } @list;
@@ -437,8 +440,8 @@ C<first_index> is an alias for C<firstidx>.
 
 =item last_index BLOCK LIST
 
-Returns the index of the last element in LIST for which the criterion in BLOCK is true. Sets C<$_>
-for each item in LIST in turn:
+Returns the index of the last element in LIST for which the criterion in BLOCK
+is true. Sets C<$_> for each item in LIST in turn:
 
     my @list = (1, 4, 3, 2, 4, 6);
     printf "item with index %i in list is 4", lastidx { $_ == 4 } @list;
@@ -451,8 +454,8 @@ C<last_index> is an alias for C<lastidx>.
 
 =item insert_after BLOCK VALUE LIST
 
-Inserts VALUE after the first item in LIST for which the criterion in BLOCK is true. Sets C<$_> for
-each item in LIST in turn.
+Inserts VALUE after the first item in LIST for which the criterion in BLOCK is
+true. Sets C<$_> for each item in LIST in turn.
 
     my @list = qw/This is a list/;
     insert_after { $_ eq "a" } "longer" => @list;
@@ -489,6 +492,15 @@ Think of it as syntactic sugar for
 
     for (my @mult = @list) { $_ *= 2 }
 
+=item before BLOCK LIST
+
+Returns a list of values of LIST upto (and not including) the point where BLOCK
+returns a true value. Sets C<$_> for each element in LIST in turn.
+
+=item before_incl BLOCK LIST
+
+Same as C<before> but also includes the element for which BLOCK is true.
+
 =item after BLOCK LIST
 
 Returns a list of the values of LIST after (and not including) the point
@@ -499,15 +511,6 @@ where BLOCK returns a true value. Sets C<$_> for each element in LIST in turn.
 =item after_incl BLOCK LIST
 
 Same as C<after> but also inclues the element for which BLOCK is true.
-
-=item before BLOCK LIST
-
-Returns a list of values of LIST upto (and not including) the point where BLOCK
-returns a true value. Sets C<$_> for each element in LIST in turn.
-
-=item before_incl BLOCK LIST
-
-Same as C<before> but also includes the element for which BLOCK is true.
 
 =item indexes BLOCK LIST
 
@@ -618,6 +621,8 @@ C<zip> is an alias for C<mesh>.
 
 =item uniq LIST
 
+=item distinct LIST
+
 Returns a new list by stripping duplicate values in LIST. The order of
 elements in the returned list is the same as in LIST. In scalar context,
 returns the number of unique elements in LIST.
@@ -628,22 +633,23 @@ returns the number of unique elements in LIST.
 =item minmax LIST
 
 Calculates the minimum and maximum of LIST and returns a two element list with
-the first element being the minimum and the second the maximum. Returns the empty
-list if LIST was empty.
+the first element being the minimum and the second the maximum. Returns the
+empty list if LIST was empty.
 
-The minmax algorithm differs from a naive iteration over the list where each element
-is compared to two values being the so far calculated min and max value in that it
-only requires 3n/2 - 2 comparisons. Thus it is the most efficient possible algorithm.
+The C<minmax> algorithm differs from a naive iteration over the list where each
+element is compared to two values being the so far calculated min and max value
+in that it only requires 3n/2 - 2 comparisons. Thus it is the most efficient
+possible algorithm.
 
 However, the Perl implementation of it has some overhead simply due to the fact
 that there are more lines of Perl code involved. Therefore, LIST needs to be
-fairly big in order for minmax to win over a naive implementation. This
+fairly big in order for C<minmax> to win over a naive implementation. This
 limitation does not apply to the XS version.
 
 =item part BLOCK LIST
 
-Partitions LIST based on the return value of BLOCK which denotes into which partition
-the current value is put.
+Partitions LIST based on the return value of BLOCK which denotes into which
+partition the current value is put.
 
 Returns a list of the partitions thusly created. Each partition created is a
 reference to an array.
@@ -664,9 +670,9 @@ Be careful with negative values, though:
 
 Negative values are only ok when they refer to a partition previously created:
 
-    my @idx = (0, 1, -1);
-    my $i = 0;
-    my @part = part { $idx[$++ % 3] } 1 .. 8;	# [1, 4, 7], [2, 3, 5, 6, 8]
+    my @idx  = ( 0, 1, -1 );
+    my $i    = 0;
+    my @part = part { $idx[$++ % 3] } 1 .. 8; # [1, 4, 7], [2, 3, 5, 6, 8]
 
 =back
 
@@ -674,11 +680,12 @@ Negative values are only ok when they refer to a partition previously created:
 
 Nothing by default. To import all of this module's symbols, do the conventional
 
-    use List::MoreUtils qw/:all/;
+    use List::MoreUtils ':all';
 
-It may make more sense though to only import the stuff your program actually needs:
+It may make more sense though to only import the stuff your program actually
+needs:
 
-    use List::MoreUtils qw/any firstidx/;
+    use List::MoreUtils qw{ any firstidx };
 
 =head1 ENVIRONMENT
 
@@ -693,7 +700,7 @@ environment.
 There is a problem with a bug in 5.6.x perls. It is a syntax error to write
 things like:
 
-    my @x = apply { s/foo/bar/ } qw/foo bar baz/;
+    my @x = apply { s/foo/bar/ } qw{ foo bar baz };
 
 It has to be written as either
 
@@ -703,11 +710,11 @@ or
 
     my @x = apply { s/foo/bar/ } my @dummy = qw/foo bar baz/;
 
-Perl5.5.x and perl5.8.x don't suffer from this limitation.
+Perl 5.5.x and Perl 5.8.x don't suffer from this limitation.
 
 If you have a functionality that you could imagine being in this module, please
-drop me a line. This module's policy will be less strict than C<List::Util>'s when
-it comes to additions as it isn't a core module.
+drop me a line. This module's policy will be less strict than L<List::Util>'s
+when it comes to additions as it isn't a core module.
 
 When you report bugs, it would be nice if you could additionally give me the
 output of your program with the environment variable C<LIST_MOREUTILS_PP> set
@@ -718,7 +725,7 @@ pure-Perl or possibly both).
 
 Credits go to a number of people: Steve Purkis for giving me namespace advice
 and James Keenan and Terrence Branno for their effort of keeping the CPAN
-tidier by making List::Utils obsolete. 
+tidier by making L<List::Utils> obsolete. 
 
 Brian McCauley suggested the inclusion of apply() and provided the pure-Perl
 implementation for it.
@@ -747,10 +754,15 @@ XS-implementation of part() work.
 
 =head1 TODO
 
-A pile of requests from other people is still pending further processing in my
-mailbox. This includes:
+A pile of requests from other people is still pending further processing in
+my mailbox. This includes:
 
 =over 4
+
+=item * List::Util export pass-through
+
+Allow B<List::MoreUtils> to pass-through the regular L<List::Util>
+functions to end users only need to C<use> the one module.
 
 =item * uniq_by(&@)
 
@@ -775,8 +787,8 @@ These were all suggested by Dan Muey.
 
 =item * listify
 
-Always return a flat list when either a simple scalar value was passed or an array-reference.
-Suggested by Mark Summersault.
+Always return a flat list when either a simple scalar value was passed or an
+array-reference. Suggested by Mark Summersault.
 
 =back
 
